src/components/Hero/styles.css
.hero {
  position: relative;
  min-height: 50vh;
  background-color: #1F2833;
  padding: 5rem 1.5rem;
  display: grid;
}

.hero-heading {
  align-self: center;
  margin: 0;
  color: #ffffff;
  font-size: 2.5rem;
}

.hero-subheading {
  margin: 1rem;
  align-self: center;
  justify-self: center;
  max-width: 600px;
  color: #a4acc4;
  font-size: 1.15rem;
  line-height: 1.75rem;
}

.hero-social {
  margin: 1rem;
  align-self: center;
  width: 100%;
}

.hero-social_link {
  padding: .5rem;
  font-size: 1.5rem;
}

.accent-text {
  color: #45A29E;
}

.hero-buttons {
  align-self: center;
}

.hero-btn {
  margin: .75rem .5rem;
}

@media only screen and (min-width: 40rem) {
  .btn {
    padding: .5rem 1rem;
    width: 40%;
  }
}

